--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "start": "cross-env NODE_ENV=production node src/index.js"
+    "start": "cross-env NODE_ENV=production node src/index.js",
+    "postinstall": "npm run build",
+    "build": "cross-env NODE_ENV=production webpack",
+    "server:dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
